--- a/src/Header/styles.scss
+++ b/src/Header/styles.scss
@@ -1,16 +1,7 @@
-nav.navbar {
-  background-color: #555;
-  display: flex;
-  padding-left: 10px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
+/* HEADER STYLE */
 
-  .navbar-title {
-    color: #FFF;
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-  }
+.navbar-title {
+  color: black;
+  display: flex;
+  align-items: center;
 }
